❝It was easier than I thought it would be❠

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,7 +1,8 @@
 public net.minecraft.world.level.chunk.LevelChunk m_156406_(Lnet/minecraft/world/level/block/entity/BlockEntity;)V # updateBlockEntityTicker
 public net.minecraft.world.level.chunk.LevelChunk m_156412_(Lnet/minecraft/core/BlockPos;)V # removeBlockEntityTicker
 public net.minecraft.server.level.ChunkMap f_140129_ # updatingChunkMap
-public net.minecraft.server.level.ChunkHolder m_140029_(Lnet/minecraft/world/level/Level;Lnet/minecraft/core/BlockPos;)V # broadcastBlockEntity
+public net.minecraft.server.level.ChunkHolder f_140016_ # playerProvider
+public net.minecraft.server.level.ChunkHolder m_288223_(Ljava/util/List;Lnet/minecraft/world/level/Level;Lnet/minecraft/core/BlockPos;)V # broadcastBlockEntity
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults <init>()V # @Lupicus
