Adds simple voltage calculation for the thermocouple and fixes some rendering issues

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$Reb
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults <init>()V # @Lupicus
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk m_112805_(Lcom/mojang/blaze3d/vertex/BufferBuilder;)V # beginLayer
 public net.minecraft.client.renderer.chunk.RenderRegionCache$ChunkInfo
+public net.minecraft.client.server.IntegratedServer f_120016_ # paused
