--- a/build.gradle
+++ b/build.gradle
@@ -197,7 +197,7 @@ dependencies {
     shade minecraftLibrary("org.jetbrains.kotlinx:kotlinx-serialization-core:${kotlinx_serialization_version}")
     shade minecraftLibrary("org.jetbrains.kotlinx:kotlinx-serialization-cbor:${kotlinx_serialization_version}")
 
-    shade minecraftLibrary("com.github.age-series:LibAge:9cc61e7f01")
+    shade minecraftLibrary("com.github.age-series:LibAge:7e78fd5add")
     shade minecraftLibrary("org.apache.commons:commons-math3:3.6.1")
     shade minecraftLibrary("com.charleskorn.kaml:kaml:0.50.0")
 
@@ -217,6 +217,8 @@ jar {
     archiveClassifier = 'slim'
 }
 
+reobf.create("shadowJar")
+
 shadowJar {
     archiveClassifier = ''
     configurations = [project.configurations.shade]
@@ -227,9 +229,11 @@ shadowJar {
     relocate "org.jetbrains", "${domain}.jetbrains"
     relocate "kotlin", "${domain}.kotlin"
     relocate "kotlinx", "${domain}.kotlinx"
-    relocate "org.apache", "${domain}.apache"
+    relocate "org.apache.commons.math3", "${domain}.apache.commons.math3"
     relocate "com.charleskorn", "${domain}.charleskorn"
     relocate "org.intellij", "${domain}.intellij"
+
+    finalizedBy("reobfShadowJar")
 }
 
 mixin {
@@ -271,9 +275,6 @@ tasks.named('jar', Jar).configure {
             'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
-
-    // This is the preferred method to reobfuscate your jar file
-    finalizedBy 'reobfJar'
 }
 
 // Example configuration to allow publishing using the maven-publish plugin
@@ -288,6 +289,11 @@ publishing {
             url "file://${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+afterEvaluate {
+    tasks.configureReobfTaskForReobfJar.mustRunAfter(tasks.compileJava)
+    tasks.configureReobfTaskForReobfJarJar.mustRunAfter(tasks.compileJava)
 }
 
 tasks.withType(JavaCompile).configureEach {
