--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,6 @@ mapping_channel=parchment
 # This must match the format required by the mapping channel.
 mapping_version=2023.09.03-1.20.1
 
-
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
@@ -54,12 +53,12 @@ mod_name=Electrical Age 2
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=2.0.0
+mod_version=2.7.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=org.eln2.mc
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=empireu, Grissess
+mod_authors=empireu, Grissess, muurr
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=If Electrical Age was so good, why isn't there an Electrical Age 2?\nElectrical Age 2:
