Implements more big block things

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,3 +9,4 @@ public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$Reb
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk m_112805_(Lcom/mojang/blaze3d/vertex/BufferBuilder;)V # beginLayer
 public net.minecraft.client.renderer.chunk.RenderRegionCache$ChunkInfo
 public net.minecraft.client.server.IntegratedServer f_120016_ # paused
+public net.minecraft.client.Minecraft m_263196_(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/level/block/entity/BlockEntity;)V # addCustomNbtData
