--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,8 @@ mixin_version = 0.8.5
 kotlin_common_denominator = 1.9.21
 kotlinx_serialization_version = 1.6.2
 
+libage_version = a18f793548
+
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
